# cift-markets

./: .dockerignore  .env.example  .env.example.payments  .env.production  .gitignore  .pre-commit-config.yaml  3D_GLOBE_IMPLEMENTATION_SUMMARY.md  ADVANCED_EXECUTION_IMPLEMENTATION.md  ADVANCED_VERIFICATION_IMPLEMENTATION.md  ALERTS_FEATURES_VERIFICATION.md  ALL_4_ISSUES_FIXED.md  ALL_CHART_FEATURES_COMPLETE.md  ALL_FIXES_APPLIED.md  ALL_ISSUES_RESOLVED.md  ALL_ISSUES_RESOLVED_FINAL.md  ALL_THREE_FIXES_COMPLETE.md  ALPACA_INTEGRATION_COMPLETE.md  ANALYTICS_FIX_COMPLETE.md  ANALYTICS_FIX_REPORT.md  ANALYTICS_FIX_VERIFICATION_V2.md  ANALYTICS_FIX_VERIFIED.md  API_FIXES_COMPLETE.md  API_KEYS_INTEGRATION.md  API_RESTORED_AND_VERIFIED.md  ARCHITECTURE_EXPLAINED.md  AUTH_FIXED_FINAL.md  AUTH_OVERHAUL_COMPLETE.md  BACKEND_AUDIT_FINDINGS.md  BACKEND_ERROR_DIAGNOSIS.md  BACKEND_GAPS_ANALYSIS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BEATING_RENAISSANCE_HONEST_ANALYSIS.md  BRUTAL_HONEST_RESEARCH_REPORT.md  BRUTAL_HONEST_SYSTEM_AUDIT.md  BUILD_IN_PROGRESS.md  BUILD_OPTIONS.md  BUILD_STATUS.md  CHARTS_BEYOND_TRADINGVIEW.md  CHARTS_IMPLEMENTATION.md  CHARTS_V2_COMPLETE.md  (+271 more)
.github/workflows/: azure-train.yml  ci.yml  deploy.yml
.ssh/: cift_deploy_key  cift_deploy_key.pub  cift_vm_key  cift_vm_key.pub
archive/: CREATIVE_NAME_CONCEPTS.md  DOMAIN_AVAILABILITY_RESEARCH.md  FLOWSENSE_7MONTH_ROADMAP.md  FLOWSENSE_ADVANCED_SPEC.md  FLOWSENSE_DEEP_RESEARCH_EVALUATION.md  FLOWSENSE_ENHANCED_TECH_STACK.md  FLOWSENSE_EXECUTION_SUMMARY.md  FLOWSENSE_FINAL_VERDICT.md  FLOWSENSE_IMPLEMENTATION_ROADMAP.md  FLOWSENSE_PHASE_1_DATA_INFRASTRUCTURE.md  FLOWSENSE_PHASE_3_MODELS.md  FLOWSENSE_PROJECT_ENTRY.md  NAMING_DEEP_RESEARCH.md  NAMING_DOMAIN_CHECKER_GUIDE.md  NAMING_EXECUTIVE_SUMMARY.md  README.md  REBRAND_ACTION_PLAN.md  TOP_NAME_CANDIDATES.md
cift/: __init__.py  cli.py  rust_bindings.py
cift/api/: __init__.py  main.py
cift/backtest/: __init__.py  engine.py
cift/core/: __init__.py  auth.py  benchmarks.py  capnp_serializer.py  clickhouse_manager.py  config.py  data_processing.py  database.py  exceptions.py  execution_engine.py  execution_strategies.py  features_numba.py  logging.py  market_simulator.py  ml_execution_strategy.py  models.py  nats_manager.py  rust_integration.py  scheduler.py  trading_queries.py
cift/data/: __init__.py  alpaca_stream.py  data_aggregator.py  databento_connector.py  order_book_processor.py  polygon_l2_connector.py
cift/inference/: __init__.py  pipeline.py
cift/integrations/: __init__.py  alpaca.py  polygon.py
cift/metrics/: __init__.py  performance.py
cift/ml/: __init__.py  advanced_execution.py  advanced_quant.py  advanced_stat_arb.py  combined_alpha_engine.py  enhanced_stat_arb_v3.py  ensemble.py  features.py  features_advanced.py  genius_production.py  genius_stat_arb.py  gnn.py  hawkes.py  hmm.py  hrp.py  institutional_production.py  labeling.py  optimize_pairs.py  order_flow_predictor.py  position_sizing.py  production_stat_arb.py  stat_arb.py  strategy_runner.py  transaction_costs.py  transformer.py  true_combined_engine.py  unified_stat_arb.py  unified_stat_arb_v2.py  validate_implementation.py  xgboost_fusion.py
cift/services/: ai_analysis_service.py  alltick_service.py  alpaca_sync_service.py  email_service.py  finnhub_data_seeder.py  finnhub_realtime_service.py  fmp_economic_calendar.py  geo_news_service.py  kyc_verification.py  market_data_service.py  ml_signal_service.py  model_status_service.py  news_service.py  payment_config.py  payment_processor.py  payment_verification.py  plaid_service.py  polygon_realtime_service.py  portfolio_analytics.py  price_alerts.py  receipt_generator.py  sms_service.py  statement_generator.py  (+3 more)
config/: prometheus.yml
database/: clickhouse-init.sql  init.sql  questdb-init.sql  seed_data.sql
docs/: BRUTAL_HONEST_ASSESSMENT.md  BRUTAL_HONEST_AUDIT.md  CIFT_MARKETS_VALUATION.md  CIFT_MARKETS_VALUATION_V2.md  FINAL_HONEST_ASSESSMENT.md  FULL_PLATFORM_AUDIT.md  FUNDING_PAGE_IMPROVEMENTS.md  GCP_TRAINING_GUIDE.md  GENIUS_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_GUIDE_2025.md  INSTITUTIONAL_TEST_RESULTS.md  INTRADAY_DATA_GUIDE.md  PAYMENT_INTEGRATIONS.md  PHASE_0_AUDIT_FIXES.md  PHASE_0_COMPLETE.md  RECEIPT_ADVANCED_REDESIGN.md  RECEIPT_CLASSIC_REDESIGN.md  RECEIPT_DESIGN.md  RECEIPT_FIXES_FINAL.md  RECEIPT_FIX_SUMMARY.md  RECEIPT_IMPROVEMENTS_SUMMARY.md  RECEIPT_VERIFICATION_SYSTEM.md  SHARPE_2_8_PLAYBOOK.md  SHARPE_2_8_STRATEGY_REPORT.md  SHARPE_2_ROADMAP.md  TECH_DECISIONS_SUMMARY.md  TECH_STACK_ANALYSIS.md  ULTIMATE_TECH_STACK_2025.md  WORLD_CLASS_QUANT_RESEARCH.md  quant_snippets.py
frontend/: .dockerignore  DESIGN_SYSTEM.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: add_alpaca_id.sql  create_news_articles.sql  fix_news_articles_schema.sql
rust_core/: BUILD.md  Cargo.toml  README.md  pyproject.toml
rust_core/schema/: market_data.capnp
rust_core/src/: features.rs  indicators.rs  json_parser.rs  lib.rs  market_data.rs  matching_engine.rs  order_book.rs  risk_engine.rs
scripts/: NEWS_FETCHER_README.md  README_SEED.md  auto_setup_secrets.ps1  build_rust_core.ps1  build_rust_core.sh  check_fundamentals.py  check_tpu_availability.sh  convert_checkpoint.py  debug_users.py  deploy_and_train.ps1  download_binance_bulk.py  download_data.py  download_intraday.py  enrich_news_geo.py  enrich_symbols_data.py  evaluate_model.py  fetch_economic_calendar.py  fetch_news.py  gcp_cpu_train_v5.py  gcp_tpu_train.py  gcp_tpu_train_v2.py  gcp_tpu_train_v3.py  gcp_tpu_train_v4.py  gcp_tpu_train_v6.py  gcp_tpu_train_v7.py  gcp_tpu_train_v8.py  gcp_train.py  generate_activity.py  generate_data.py  generate_news_geotags.py  init_questdb.py  init_revenue_db.py  inspect_parquet.py  populate_economic_events.sql  populate_funding.py  populate_funding.sql  populate_market_data.py  populate_quick.py  populate_recent.py  populate_today.py  (+30 more)
temp_migrations/: 002_critical_features.sql  003_user_settings.sql
tests/: __init__.py  conftest.py
(+209 files in other folders)
