[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cift-markets"
version = "0.1.0"
description = "CIFT Markets - Computational Intelligence for Financial Trading"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Meso Francis", email = "mesofrancis@outlook.com"}
]
keywords = ["trading", "machine-learning", "algorithmic-trading", "order-flow", "quant"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core data processing
    "polars>=0.20.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "numba>=0.58.0",
    
    # Machine Learning
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "pomegranate>=1.0.0",
    "torch-geometric>=2.4.0",
    
    # Streaming & Messaging (Phase 5-7 upgrades)
    "nats-py>=2.6.0",        # NATS JetStream (5-10x lower latency than Kafka)
    "redis>=5.0.0",          # Compatible with Dragonfly
    "websockets>=12.0",
    "msgpack>=1.0.0",        # Fast serialization (5x faster than JSON)
    
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "greenlet>=3.0.0",
    "httpx>=0.25.0",         # For ClickHouse HTTP interface
    "slowapi>=0.1.9",        # Rate limiting
    "webauthn>=2.0.0",       # Passkeys support
    
    # API Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "strawberry-graphql>=0.213.0",
    "python-socketio>=5.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Market Data & Execution
    "alpaca-py>=0.13.0",
    "polygon>=1.0.0",
    "ib-insync>=0.9.86",
    
    # MLOps
    "mlflow>=2.8.0",
    "dvc>=3.30.0",
    "feast>=0.35.0",
    "bentoml>=1.1.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "sentry-sdk[fastapi]>=1.38.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "hvac>=2.0.0",
    
    # Payment Processing & Receipt Generation
    "stripe>=7.0.0",           # Stripe payment integration
    "reportlab>=4.0.0",        # PDF generation for receipts
    "qrcode>=7.4.0",           # QR code generation for receipt verification
    "pillow>=10.0.0",          # Image processing for QR codes
    
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",  # For news API client (async HTTP requests)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "jupyterlab>=4.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "faker>=20.1.0",
    "freezegun>=1.4.0",
    "responses>=0.24.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://ciftmarkets.com"
Repository = "https://github.com/MessoJ/cift-markets"
Documentation = "https://docs.ciftmarkets.com"

[project.scripts]
cift = "cift.cli:app"

[tool.maturin]
# Rust extension module configuration
features = ["pyo3/extension-module"]
python-source = "cift"
module-name = "cift.cift_core"

[tool.setuptools]
packages = {find = {include = ["cift*"]}}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "kafka.*",
    "redis.*",
    "questdb.*",
    "ib_insync.*",
    "polygon.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=cift --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["cift"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
