[package]
name = "cift_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cift_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rust_decimal = "1.33"
ahash = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
